# my-own-spotify-hitster

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: qa.yml
src/: config.py  main.py  spotify_functions.py
src/components/: draganddrop.py  game_board.py  game_state.py  player_row.py
src/my_own_spotify_hitster/: app.py  config.py  main.py  spotify_functions.py
src/my_own_spotify_hitster/components/: draganddrop.py  game_board.py  game_state.py
src/my_own_spotify_hitster/pages/: config_page.py  play_page.py
src/pages/: play_page.py
src/resources/: sortable_element.js
tests/: test_spotify_functions.py
