[project]
name = "my-own-spotify-hitster"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kevin Trebing", email = "hans-bambel@gmx.net" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui>=2.5.0",
    "pydantic-settings>=2.6.1",
    "spotipy>=2.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".local",
    ".cache",
    ".venv",
    "./venv",
    ".vscode",
    "__pycache__",
    "docs",
    "build",
    "dist",
]
[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "A",   # flake8-builtins
    "C90", # mccabe complexity
    "I",   # isort
    "PT",  # flake8-pytest-style
    "RUF", # ruff
]
ignore = [
    "B905", # length-checking in zip() only introduced with Python 3.10 (PEP618)
    "D202",  # No blank lines allowed after function docstring
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D205",  # 1 blank line required between summary line and description
    "D203",  # One blank line before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D415",  # First line should end with a period, question mark, or exclamation point
]
[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.mypy]
ignore_missing_imports=true
